# SheBuilds-TicTacToe

./: .gitignore  .gitmodules  README.md
tictactoe/: Cargo.toml
tictactoe-cli/: Cargo.toml
tictactoe-cli/src/: main.rs
tictactoe/src/: lib.rs
ui/: package.json  tsconfig.json
ui/src/: Board.tsx  GameState.tsx  Root.tsx  index.tsx  model.tsx  styles.css
