[package]
name = "tictactoe-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concordium-rust-sdk = {path = "../deps/concordium-rust-sdk"}
anyhow = "1.0"
clap = "2.34"
structopt = "0.3"
thiserror = "1"
serde_json = "1.0.60"
serde = {version = "1", features = ["derive"]}
chrono = {version = "0.4", features = ["serde"] }
tokio = { version = "*", features = ["full"] }
