[package]
name = "tictactoe"
version = "0.1.0"
edition = "2018"

[features]
default = ["std"]
std = ["concordium-std/std"]

[dependencies]
concordium-std = {path = "../deps/concordium-rust-smart-contracts/concordium-std", default-features = false}

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "s"
